--- a/AncientRoman.html
+++ b/AncientRoman.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -576,7 +575,7 @@ text-align: center; /* Centers text horizontally */
            Citrus: Lemons, Limes, oranges, tangerines and fig trees characterize Italian gardens. 
            Narrow, tall trees like the Skyroket Juniper.
         </p>
-         <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/SkyrocketJuniper.jpg" alt=centered width="350" height="500""
+         <img src="SkyrocketJuniper.jpg" alt=centered width="350" height="500""
         <p><h3>Vines</h3></p>
         <p>There are over 6,000 species of grape varietles in Italy today, the vines were used to for shaded pergolas, and wine making.</p>
     </div>
@@ -732,7 +731,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -752,7 +751,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
