--- a/ArchitectsofGardenDesign.html
+++ b/ArchitectsofGardenDesign.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -355,7 +354,7 @@ text-align: center; /* Centers text horizontally */
           <h2 id="features">Architects of Garden Design</h2>
          <p><h3>Capability Brown</h3>
           Capability Brown was a Royal gardener who designed for Princess Augusta, the sister of King George III. He was acknowledged in Germany for introducing the "clump, the belt drive and the serpentine bodies of water", recreating the classical landscapes of Capri and Sicily.
-          <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/CB.jpg" alt=centered width="650" height="550"</p>
+          <img src="CB.jpg" alt=centered width="650" height="550"</p>
           <a href="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Documents\CapabilityBrown"><p>The English Garden in Germany</p></a>
    
      <p><h3>William Chambers</h3> Born February 23, 1723 in Gothenburg, Sweden. He was a architect in the Georgian period and a leading Palladian style architect. He studied in England and became British, to eventually aid the Prince of Wales, and George the III as an architect tutor. Best known works are; Somerset House, the Great Pagoda and the Kew Gardens, in Surrey (now in London).
@@ -421,7 +420,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\IMG_2962.jpeg" style="display: block; margin: auto;" width="550" height="350">
+    <img src="IMG_2962.jpeg" style="display: block; margin: auto;" width="550" height="350">
     <h5> </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -441,7 +440,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
