--- a/Assyrian.html
+++ b/Assyrian.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -573,7 +572,7 @@ text-align: center; /* Centers text horizontally */
 <p> Assyrian kings would set aside the land surrounding the palace to create a 'Assyrian Royal Landscape' with gardens, groves of trees, and animal preserves. The sites would be lined with walls and palms</p>
         <p><h3>The Hanging Gardens of Babylon</h3>
         A fabled garden of the 605-562 BCE of the Neo-Babylonian Empire. Also known as the Gardens of Semiramis, the irrigation system pinpoints the significance of the advancements of technology during this period. It was described to have high stone terrraces to imitate mountains, each planted with large trees, and vegetation that draped over the edges. </p>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Babylon.jpg" alt=centered width="550" height="300"</p>
+<img src="Babylon.jpg" alt=centered width="550" height="300"</p>
          <p>Persian Translation of "Walled Garden" is Paradise
         </p>
 
@@ -730,7 +729,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -750,7 +749,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
