--- a/Awards.html
+++ b/Awards.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -402,28 +401,28 @@ body {
   <p>
   <div class="row">
   <div class="column">
-    <div class="card"><h2>Climbers</h2><img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\HoosierBeauty.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"><h5> Hoosier Beauty 9.0 </h5></div>
+    <div class="card"><h2>Climbers</h2><img src="HoosierBeauty.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"><h5> Hoosier Beauty 9.0 </h5></div>
   </div>
   <div class="column">
-    <div class="card"><h2>Floribunda</h2><img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\Floribunda CoralGlo.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"><h5> Coral Glo/Gardens 9.0 *Rose of the year 2026* </h5></div>
+    <div class="card"><h2>Floribunda</h2><img src="Floribunda CoralGlo.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"><h5> Coral Glo/Gardens 9.0 *Rose of the year 2026* </h5></div>
   </div>
   <div class="column">
-    <div class="card"><h2>Grandiflora</h2><img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\ROSE_QUEENELIZ.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"><h5> Queen Elizabeth 9.0 </h5></div>
+    <div class="card"><h2>Grandiflora</h2><img src="ROSE_QUEENELIZ.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"><h5> Queen Elizabeth 9.0 </h5></div>
   </div>
   <div class="column">
-    <div class="card"><h2>Hybrid Tea</h2><img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\PeaceRose.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"><h5> Peace 9.0 </h5></div>
+    <div class="card"><h2>Hybrid Tea</h2><img src="PeaceRose.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"><h5> Peace 9.0 </h5></div>
   </div>
   <div class="column">
-    <div class="card"><h2>Miniatures</h2><img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\beautysecretMini.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"><h5> Beauty Secret 9.0 </h5></div>
+    <div class="card"><h2>Miniatures</h2><img src="beautysecretMini.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"><h5> Beauty Secret 9.0 </h5></div>
   </div>
   <div class="column">
-    <div class="card"><h2>Old Garden Roses</h2><img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\duchesse-de-montebello.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"><h5> Duchesse de Montebello 9.0 </h5></div>
+    <div class="card"><h2>Old Garden Roses</h2><img src="duchesse-de-montebello.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"><h5> Duchesse de Montebello 9.0 </h5></div>
   </div>
   <div class="column">
-    <div class="card"><h2>Polyanthans</h2><img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\Rose-The-Fairy.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"><h5> The Fairy 8.4 </h5></div>
+    <div class="card"><h2>Polyanthans</h2><img src="Rose-The-Fairy.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"><h5> The Fairy 8.4 </h5></div>
   </div>
   <div class="column">
-    <div class="card"><h2>Shrub</h2><img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\Country-Dancer.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"><h5> Country Dancer 9.3 </h5></div>
+    <div class="card"><h2>Shrub</h2><img src="Country-Dancer.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"><h5> Country Dancer 9.3 </h5></div>
   </div>
 </div>  </p>
 
@@ -440,7 +439,7 @@ body {
 
 
 <footer>
-  <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+  <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
