--- a/Baroque.html
+++ b/Baroque.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -571,10 +570,10 @@ text-align: center; /* Centers text horizontally */
     <div class="content">
         <h1>Baroque Garden Design</h1>
         <p> Baroque gardens are at the apex of luxury and extravagance. This period, during the 17th and 18th centuries, created the highest standard in sophisticated artistry of garden design that continuous to inspire gardens around the world to this day. The Baroque period built on the classic designs from Roman and Greek styles, refined them and created larger than life extravagance. This period, during the 17th and 18th centuries, created the highest standard in sophisticated artistry of garden design that continuous to inspire gardens around the world to this day. The Baroque period built on the classic designs from Roman and Greek styles, refined them and created larger than life extravagance that spread across Europe.</p>
-        <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/VilladEste.jpg" alt=centered width="350" height="250"</p>
+        <img src="VilladEste.jpg" alt=centered width="350" height="250"</p>
         <p> The Italian influence is displayed with many of the sculpture masterpieces that often depict gods, heroes and mythology. This was combined with Renaissance elements of wealth by using cascading fountains and dynamic water displays to create breathtaking natural displays. The Italian Baroque Gardens of Villa d’Este in Tivoli are an excellent example of this.  
         </p>
-        <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/VillaEste.jpg" alt=centered width="350" height="250"</p>
+        <img src="VillaEste.jpg" alt=centered width="350" height="250"</p>
         <p> In Germany and Austria, the Schonbrun Palace garden in Vienna and the Herrenhausen Gardens in Hanover are exceptional depictions of the imperial majesty. The paths were widened into avenues, and the Parterres were even more expansive. The structures were inspired by Greek and Roman mythology. 
         </p>
         <p> <h2> Elements of Design </h2>
@@ -732,7 +731,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -752,7 +751,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
