--- a/Bauhaus.html
+++ b/Bauhaus.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -569,11 +568,11 @@ text-align: center; /* Centers text horizontally */
 
     <!-- Main Content -->
     <div class="content">
-        <h1>Bauhaus Garden Design</h1><img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Bauhaus.jpg" alt=centered width="500" height="350"</p><p>
+        <h1>Bauhaus Garden Design</h1><img src="Bauhaus.jpg" alt=centered width="500" height="350"</p><p>
         <p> Originating in the 1930's for buildings, Bauhaus design's are sleek, contemporary and are influenced with simple and economical principals, while utlizing a balance of flora, wood, gravel and concrete. Geometric shapes are used in the orerall site design, as well as in the sculputres, stonework and gardens.  
         </p>
                    
-             <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Bauhaus2.jpg" alt="centered" width="350" height="350"</p>
+             <img src="Bauhaus2.jpg" alt="centered" width="350" height="350"</p>
     </div>
 
     <!-- Sidebar -->
@@ -726,7 +725,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -746,7 +745,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
