--- a/Bridal Bouquets.html
+++ b/Bridal Bouquets.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -415,40 +414,40 @@ text-align: center; /* Centers text horizontally */
 <div class="column">
 <div class="container">
 <p><h3>Caroline, Princess of Monaco</h3> Married June, 1978 carried tiny White Orchids.</p>
- <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Bridal/Caroline.jpg"  width="250" height="350">
+ <img src="Caroline.jpg"  width="250" height="350">
 </div></div>
 
 
   <div class="column">
 <div class="container">
 <p><h3>Grace Kelly, Princess of Monaco</h3> In 1956, Grace Kelly married Prince Ranier Grimaldi of Monaco, carrying Lilies-of-the-Valley. Her matrons carried Tea Roses, and the flower girls White Daisies. </p>
-  <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Bridal/gracekelly.jpg"  width="300" height="350">
+  <img src="gracekelly.jpg"  width="300" height="350">
 </div></div>
 
   
   <div class="column">
 <div class="container">
 <p><h3>Victoria, Queen of the United Kingdom</h3> Married Prince Albert in 1840 in the Royal Chapel at St. James Palace. She carried a tiny bouquet of Snowdrops, and wore a wreath crown, of white porcelain Orange Blossoms designed for her wedding day.</p>
- <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Bridal/queen-victoria.jpg"  width="275" height="350">
+ <img src="queen-victoria.jpg"  width="275" height="350">
 </div></div>
 
 
   <div class="column">
 <div class="container">
 <p><h3>Silvia Renate Sommerlath, Queen of Sweden</h3> Married to King Carl XVI Gustaf of Sweden, Silvia chose Orchids and Jasmine, with medium-sized cascading Posy, arranged among Stephanotis, Lily of the Valley and Sprigs of Myrtle.</p>
- <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Bridal/QueenSilvia.jpg"  width="200" height="300">
+ <img src="QueenSilvia.jpg"  width="200" height="300">
 </div></div>
 
   <div class="column">
 <div class="container">
 <p><h3> Victoria, Princess of Sweden</h3> Victoria's bouquet consisted of the traditional flowers seen in Royal Weddings with more flowers adding to the cascading effect. Azaleas, Bleeding Heart, Clematis, Cosmos, Dicentra Formosa, Gardenias, Lilies, Lily of the Valley, Marbacka Pelargonium, Orchids, Peonies, Roses, Sweet Peas, Waxflower and Myrtle of the same garden as her mothers bouquet.</p>
- <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Bridal/VictoriaofSweden.jpg"  width="300" height="200">
+ <img src="VictoriaofSweden.jpg"  width="300" height="200">
 </div></div>
 
   <div class="column">
 <div class="container">
 <p><h3>Muriel Vanderbilt</h3> The American Society wedding at Newport, to Frederick Cameron Church Jr. had the veil of Marie Antoinette purchased for the event. She carried a bouquet of Orchids and Gardenias. </p>
- <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Bridal/Muriel-vanderbilt.jpg"  width="200" height="300">
+ <img src="Muriel-vanderbilt.jpg"  width="200" height="300">
 </div></div>
 
 
@@ -458,7 +457,7 @@ text-align: center; /* Centers text horizontally */
     <div class="row">
   <div class="column">
 <div class="container">
-  <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Bridal\BLUEORCHIDCORS.jpg" alt="Avatar" class="image" width="250" height="250">
+  <img src="BLUEORCHIDCORS.jpg" alt="Avatar" class="image" width="250" height="250">
   <div class="overlay"><href="https://www.enterpriseflowerstudio.com/wedding-gallery">Enterprise Flower Studio</a></div> 
     <h2></h2>
 </div>
@@ -466,7 +465,7 @@ text-align: center; /* Centers text horizontally */
 
   <div class="column">
 <div class="container">
-  <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\bridal\Sweet Elegance Flower Studio.jpg" alt="Avatar" class="image" width="250" height="250">
+  <img src="SweetEleganceFlowerStudio.jpg" alt="Avatar" class="image" width="250" height="250">
   <div class="overlay"><href="https://www.sweetelegance.ca/okanagan-weddings-and-events-181008-688083-498691-571595-581102-750967-278730.html">Sweet Elegance Flower Studio</a></div>
     <h2></h2>
 </div>
@@ -474,7 +473,7 @@ text-align: center; /* Centers text horizontally */
 
  <div class="column">
 <div class="container">
-  <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Bridal\OkanaganFloral.jpg" alt="Avatar" class="image" width="250" height="250">
+  <img src="OkanaganFloral.jpg" alt="Avatar" class="image" width="250" height="250">
   <div class="overlay"><href="https://www.missionparkflowersbc.com/wedding-bouquets">Okanagan Floral</a></div>
     <h2></h2>
 </div>
@@ -483,7 +482,7 @@ text-align: center; /* Centers text horizontally */
 
  <div class="column">
 <div class="container">
-  <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Bridal\kelownaflorist.jpg" alt="Avatar" class="image" width="250" height="250">
+  <img src="kelownaflorist.jpg" alt="Avatar" class="image" width="250" height="250">
   <div class="overlay"><href="https://www.valleybloomco.ca/weddingfloralservices">Valley Bloom</a></div>
     <h2></h2>
 </div>
@@ -492,7 +491,7 @@ text-align: center; /* Centers text horizontally */
 
  <div class="column">
 <div class="container">
-  <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Bridal\lavendarandlace.jpg" alt="Avatar" class="image" width="250" height="250">
+  <img src="lavendarandlace.jpg" alt="Avatar" class="image" width="250" height="250">
   <div class="overlay"><href="https://www.lavenderandlace.ca/our-gallery">Lavendar and Lace</a></div> 
     <h2></h2>
 </div>
@@ -500,7 +499,7 @@ text-align: center; /* Centers text horizontally */
 
  <div class="column">
 <div class="container">
-  <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Bridal\missionpark.jpg" alt="Avatar" class="image" width="250" height="250">
+  <img src="missionpark.jpg" alt="Avatar" class="image" width="250" height="250">
   <div class="overlay"><href="https://www.missionparkflowersbc.com/wedding-bouquets">Mission Park Flower</a></div> 
     <h2></h2>
 </div>
@@ -537,7 +536,7 @@ text-align: center; /* Centers text horizontally */
 
 
 <footer>
-  <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+  <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
