--- a/Byzantine.html
+++ b/Byzantine.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -571,7 +570,7 @@ text-align: center; /* Centers text horizontally */
     <div class="content">
         <h1>Byzantine Garden Design</h1>
         <p>The Byzantine period was between the 13th and 15th centuries which is mainly known for the mosaic art, and the decline of Constantinople in 1453. The mosaics represented the melange of the Christian, Hellenistic, Roman, and Oriental traditions.</p>
-        <p><img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Gardens\Byzantine.jpg" style="display: block; margin: auto;" width="500" height="350"></p>
+        <p><img src="Byzantine.jpg" style="display: block; margin: auto;" width="500" height="350"></p>
     </div>
 
     <!-- Sidebar -->
@@ -723,7 +722,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -743,7 +742,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
