--- a/CentralPark.html
+++ b/CentralPark.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -574,7 +573,7 @@ text-align: center; /* Centers text horizontally */
             <p><h2> Gates</h2> In honour of the people who build the most populous city in the western hemisphere, the gates between 59th and 110th street are named: Scholars Gate, Artist' Gate, Artisnas Gate, Merchants Gate, as well as; Pioneers, Farmers, Hunters, Miners, Woodsmen, Mariners, Engineers, Inventors, and Warriors. Along 72nd Street: Women, Boys, Girls, and Strangers Gate. <p> 
                 <p> <h2> Statues</h2>To commemorate the cities great poets three statues are named after; Johann C.F. von Schiller, Thomas Moore and Sir Walter Scott.The inventor of the telegraph; Samuel F.B. Morse is placed at the Inventors Gate.</p>
                 <p><h2> Pathways</h2> The park has pedestrian pathways, carriage drives and a bridle path. This was in mind of the horse and cart mode of transport in the 19th century. The Mall, was inspired by the Piazza San Marco in Venice and the Champs Elysees in Paris. </p>
-                    <p> <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/CentralPark.jpg" alt=centered width="550" height="350"</p>
+                    <p> <img src="CentralPark.jpg" alt=centered width="550" height="350"</p>
 
         </p>
     </div>
@@ -729,7 +728,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -749,7 +748,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
