--- a/Charlemagne.html
+++ b/Charlemagne.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -572,7 +571,7 @@ text-align: center; /* Centers text horizontally */
         <h1>Charlemagne Garden Design</h1>
         <p> Charlemagne's Reign of the Holy Roman Empire spanned 47 years, until his passing in 814 C.E.(Common Era). Knowns as Charles or Karl the Great, he aimed to pay tribute to the Ancient Western Roman designs, 
         </p>
-        <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/bonnefont.jpg" alt=centered width="550" height="350" 
+        <img src="bonnefont.jpg" alt=centered width="550" height="350" 
 <div class="header-text">
         <p> <h3> Flowers </h3>
             Lily, Rose, and Iris. 
@@ -729,7 +728,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -749,7 +748,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
