--- a/ClassicGreek.html
+++ b/ClassicGreek.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -580,9 +579,9 @@ text-align: center; /* Centers text horizontally */
 <h3>Lavender</h3>
 <h3>Rosemary</h3>
         <p><h2>Arches</h2></p>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/arches.jpg" alt=centered width="350" height="250""</p>
+<img src="arches.jpg" alt=centered width="350" height="250""</p>
         <p><h2>Water</h2>
-<img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Gardens\GreekFountains.jpg" style="display: block; margin: auto;" width="350" height="500">
+<img src="GreekFountains.jpg" style="display: block; margin: auto;" width="350" height="500">
         </p>
     </div>
 
@@ -737,7 +736,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -757,7 +756,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
