--- a/ClassicRoman.html
+++ b/ClassicRoman.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -570,16 +569,16 @@ text-align: center; /* Centers text horizontally */
     <!-- Main Content -->
     <div class="content">
         <h1>Classic Roman Garden Design</h1>
-         <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/italianscene.jpg" alt=centered width="550" height="350"</p>
+         <img src="italianscene.jpg" alt=centered width="550" height="350"</p>
         <p>Roman styled gardens celebrated art, architechture and seperated itself from natural landscapes. It was a period that could be distinguished as an urban countryside setting.</p> 
         <p><h3>Atrium</h3></p>
-          <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Atrium.jpg" alt=centered width="550" height="350"</p>
+          <img src="Atrium.jpg" alt=centered width="550" height="350"</p>
         <p><h3>Perystle</h3></p>
-          <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Perystle.jpg" alt=centered width="550" height="350"</p>
+          <img src="Perystle.jpg" alt=centered width="550" height="350"</p>
         <p><h3>Villa</h3></p>
-          <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/VillaGarden.jpg" alt=centered width="250" height="350"</p>
+          <img src="VillaGarden.jpg" alt=centered width="250" height="350"</p>
         <p><h3>Palace & Imperial</h3>Domus Aurea of Nero, Hadrian's Villa</p>
-        <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Hadrian.jpg" alt=centered width="550" height="350"</p>
+        <img src="Hadrian.jpg" alt=centered width="550" height="350"</p>
     </div>
 
     <!-- Sidebar -->
@@ -733,7 +732,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -753,7 +752,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
