--- a/Contemporary.html
+++ b/Contemporary.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -569,11 +568,11 @@ text-align: center; /* Centers text horizontally */
 
     <!-- Main Content -->
     <div class="content">
-        <h1>Contemporary Garden Design</h1>   <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/modern.jpg" alt=centered width="500" height="350"</p><p>
+        <h1>Contemporary Garden Design</h1>   <img src="modern.jpg" alt=centered width="500" height="350"</p><p>
         <p> Contemporary garden design is well suited to modern and new age landscaping. These styles are insprired by Formal, Eastern and Italian terraces with some English Romantic design incorporated into the gardens. Recognizable characteristics include: gravel paths and stonework, a variety of wildflowers and flower beds, greenery, foliage, hedges and trees. The fountains can vary, but water is welcomed in the overall asthetic, creating a calming atmosphere. The designs add the element of light, as an entirely new concept invovled in the design. Many  urban environments, built for hosting events, will use contemporary designs that include a concrete feature, swimming pool, fireplace, and patio with seating. 
         </p>
           
-             <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/moderngarden.jpg" alt="centered" width="350" height="350"</p>
+             <img src="moderngarden.jpg" alt="centered" width="350" height="350"</p>
 
     </div>
 
@@ -728,7 +727,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -748,7 +747,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
