--- a/Egyptian.html
+++ b/Egyptian.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -572,7 +571,7 @@ text-align: center; /* Centers text horizontally */
         <h1> Egyptian Garden Design</h1>
         <p>Gardens belonged to the Pharoes of Egypt around 1000 BC. These were grandiose geometric layouts that had pools encircled with palm trees. They were displays of power, status, and protected by desert walls. Gardens were very costly to build and were predominately in royal palaces, wealthy households, and religous temples, as archeaolgical remains suggest.</p>
         <p>Palms, Sycomores, Mandrakes and hedges around pools with fish in an estate garden of the Tomb of Nebamun.</p>
-         <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Egypt.jpg" alt=centered width="500" height="350"</p>
+         <img src="Egypt.jpg" alt=centered width="500" height="350"</p>
     </div>
 
     <!-- Sidebar -->
@@ -726,7 +725,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -746,7 +745,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
