--- a/FletcherSteele.html
+++ b/FletcherSteele.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -570,11 +569,11 @@ text-align: center; /* Centers text horizontally */
     <!-- Main Content -->
     <div class="content">
         <h1>Fletcher Steele Garden Design</h1>
-          <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/FletcherSteeleNaumkeag.jpg" alt="centered" width="500" height="350"</p>
+          <img src="FletcherSteeleNaumkeag.jpg" alt="centered" width="500" height="350"</p>
         <p> A renowned American architect in garden design, who contributed over 600 works in his name in the late 1880's. His influences developed from European formality, Japanese asthetics, that were reimaged in the American eye. His most well recognized composition is the Blue Staircase of Naumkeag in the Berkshire Mountains, in Massachusetts.  
         </p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/SvHGT6ge2RI?si=7EvV2-lqrUr0xpSJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-         <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/FletcherSteele.jpg" alt="centered" width="500" height="350"</p>
+         <img src="FletcherSteele.jpg" alt="centered" width="500" height="350"</p>
          
     </div>
 
@@ -729,7 +728,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -749,7 +748,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
