--- a/Florentine.html
+++ b/Florentine.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -570,7 +569,7 @@ text-align: center; /* Centers text horizontally */
     <!-- Main Content -->
     <div class="content">
         <h1>Florentine Garden Design</h1>
-        <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/villa-gamberaia-tuscan-formal-garden.jpg" alt="centered" width="500" height="350"</p>
+        <img src="villa-gamberaia-tuscan-formal-garden.jpg" alt="centered" width="500" height="350"</p>
         <p> <h3> Boxwood Parterre Gardens </h3>
         Low geometric hedges are trimmed to precision for these elegant Italian garden designs. Gravel pathways weave through greenery, lined with tall trees along the outskirts, with large plantars in the central focal point. </p> 
         <p> <h3> Tuscan </h3> 
@@ -594,7 +593,7 @@ earth toned stones, regionally sourced is an excellent way to achieve the relaxe
 
 </p>
         <p> <h2> Fountain Gardens</h2> </p>
-         <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Fountains.jpg" alt="centered" width="300" height="350"</p>
+         <img src="Fountains.jpg" alt="centered" width="300" height="350"</p>
     </div>
 
     <!-- Sidebar -->
@@ -748,7 +747,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -768,7 +767,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
