--- a/History.html
+++ b/History.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -416,11 +415,11 @@ text-align: center; /* Centers text horizontally */
 
 </p>
 
-<div class="centered">
+  <div class="centered">
 <h5> Carl Linnaeus’s Systema Naturae </h5>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/kVD6PP61A28?si=iPaVXE-V1rEXIYmB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
-  
+
 <div class="split left">
   <div class="centered">
 <h5> Linnean Lens: Carl Linnaeus' Species Plantarum and Naming Nature </h5>
@@ -431,8 +430,8 @@ text-align: center; /* Centers text horizontally */
   <div class="centered">
 <h5> Linnean Lens: Carl Linnaeus' Student Manuscript </h5>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/L6ZMtdOuZNo?si=5LBhvgTMzmeO60Ee" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  </div>
-    <div class="split right">
+</div>
+<div class="split right">
   <div class="centered">
 
   </div>
@@ -483,7 +482,7 @@ div.scroll-container img {
 
 
 <footer>
-  <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+  <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
@@ -495,5 +494,4 @@ div.scroll-container img {
 
 </body>
 </html>
-
 
