--- a/India.html
+++ b/India.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -573,10 +572,10 @@ text-align: center; /* Centers text horizontally */
         <p>  Emphasizing symmetry and balance, the Indian Garden Design are designed around a cenrtal axis and combines elements to create harmony and balance. 
         </p>
         <p> Cacti, tropical plants, lotus flowers, succulents, aquatic and drought-resistant plants.</p>
-         <p> <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/India.jpg" alt=centered width="350" height="300"</p>
+         <p> <img src="India.jpg" alt=centered width="350" height="300"</p>
 
          <p> <h2> Mughal Garden Design </h2> A blend of Persian and Indian styles with symmetrical layouts, water features and lush greenery. A diverse range of trees flowers and plants are used to inspire a place of paradise. The enhanced fragrance of the garden is a result of the flowering plants and fruit gardens. </p>
-          <p> <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/TajMahal.jpg" alt=centered width="350" height="300"</p>
+          <p> <img src="TajMahal.jpg" alt=centered width="350" height="300"</p>
     </div>
 
     <!-- Sidebar -->
@@ -729,7 +728,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -749,7 +748,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
