--- a/MoorishSpain.html
+++ b/MoorishSpain.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -572,7 +571,7 @@ text-align: center; /* Centers text horizontally */
         <h1>Moorish Spain Garden Design</h1>
         <p>Paradise Gardens consisted of enclosed areas, walled enclosures with water-centric designs in arid climates. They were highly symbolic and were related to the Islam migration that crossed the Mediterranean. </p>
         <p> The intricate tile had extensive detailing, creating unique visual asthetics and colour schemes. This was often with the intention to find serenity with the inclusion of reflecting pools. The hedges grow tall allowing for a private escape. </p>
-         <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/MoorishSpain.jpg" alt=centered width="350" height="500"</p>
+         <img src="MoorishSpain.jpg" alt=centered width="350" height="500"</p>
     </div>
 
     <!-- Sidebar -->
@@ -725,7 +724,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -745,7 +744,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
