--- a/Provence.html
+++ b/Provence.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -572,14 +571,14 @@ text-align: center; /* Centers text horizontally */
         <h1>The Garden's of Provence, France</h1>
         There are over 1556 registered gardens on the Commitee of Parks and Gardens of France. To view more search the
         <a href="https://www.parcsetjardins.fr/jardins/carte" class="active">Map of France's Gardens </a>
-        <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Provence.jpg" alt=centered width="550" height="300"</p>
+        <img src="Provence.jpg" alt=centered width="550" height="300"</p>
 
                <p><h2>Les Jardins du Musee International de la Parfumeries</h2>
                 These botanical gardens grow roses, Jasmin, Vioellets and many other flowers in the 2.5 acres of this perfume floral garden in the town of Mouans Sartoux.</p>
-                <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Perfume.jpg" alt=centered width="550" height="300"</p>
+                <img src="Perfume.jpg" alt=centered width="550" height="300"</p>
                   <p><h2>Le Jardin de Brantes</h2>
                 These botanical gardens grow roses, Jasmin, Vioellets and many other flowers in the 2.5 acres of this perfume floral garden in the town of Mouans Sartoux.</p> <a href="https://www.parcsetjardins.fr/jardins/324-parc-et-jardin-du-chateau-de-brantes" class="active">Chateau du Brantes</a>
-                <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Brantesgarden.jpg"
+                <img src="Brantesgarden.jpg"
             alt=centered width="550" height="300"</p>
                   <p><h2>Valrose</h2>
                     Ten hectares of gardens began being planted in 
@@ -588,7 +587,7 @@ text-align: center; /* Centers text horizontally */
 
 
 <a href="https://www.parcsetjardins.fr/jardins/535-parc-valrose" class="active">Valrose</a>
-                <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/ValRose.jpg"     alt=centered    width="550" height="300"</p>  
+                <img src="ValRose.jpg"     alt=centered    width="550" height="300"</p>  
 
     </div>
 
@@ -743,7 +742,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -763,7 +762,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
