--- a/Regional Species.html
+++ b/Regional Species.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -400,76 +399,76 @@ text-align: center; /* Centers text horizontally */
         <td>light blue, lavendar</td>
         <td>3-5 cms Double (16-18 petals), slight fragrence</td>
         <td> Leaves are lanceolate, unlobed, light green, tall</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Regionalspecies\chicory.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="chicory.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
       <tr>
         <td>Sulphur Cinquefoil (Potentilla recta)</td>
         <td>Light to Pale Yellow petals</td>
          <td> Five lobes (5 petals)</td>
         <td> Flowering occurs June to August, that can reach up to 80 cm in height, with six or seven,  15 cm leaflets.</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Regionalspecies\Cinquefoil.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="Cinquefoil.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       <tr>
         <td>Sagebrush Mariposa Lily (Calochortus macrocarpus)</td>
         <td>Pink-Purple, White</td>
          <td> Large (3 petals), tappering bulbs</td>
         <td> Blooms in June and July, and are perrenials. The sepals are about 3.9 cms long, only slightly greater in length than the petals.  </td> 
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Regionalspecies\sagebrushmariposalily.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="sagebrushmariposalily.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
       <tr>
-        <td>Bearded iris (Hybrid Iris germanica) </td>
+        <td>Bearded Iris (Hybrid Iris germanica) </td>
         <td>Violed - Purple</td>
          <td> 5-10 cms, Double (6 petals), inner set grows upwards, outter set folds out with deeper purple petals, with yellow centre. </td>
         <td> Tall long stems up to a meter tall. Grows in the valley and up to the sub alpine terrain.   </td> 
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Regionalspecies\iris.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="iris.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
            <tr>
         <td>White Sweet Clover (Melilotus albus) </td>
         <td>White</td>
          <td> 2-6 inches long, 5 petals. </td>
         <td> An annual which can reach 2.5 m in height.    </td> 
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Regionalspecies\whitesweetclover.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="whitesweetclover.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
       <tr>
         <td>Roughfruit Fairybells (Prosartes trachycarpa) </td>
         <td>White</td>
          <td> Delicate hanging down, four petals. </td>
         <td> This herbaceous perennial grows 30-75 cm in height. It grows along with Saskatoon berries    </td> 
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Regionalspecies\Fairybells.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="Fairybells.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
          <tr>
         <td>Carpet Vervain (Verbena bracteata) </td>
         <td>Pale Purple</td>
          <td> 9 mm long, a spike of flowers, 5 petals. </td>
         <td>Blooms between May and October. Grows up to 30 cm in height.   </td> 
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Regionalspecies\Vervain.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="Vervain.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
       <tr>
         <td>Bride's Bonnet, Queens Cup (Clintonia uniflora) </td>
         <td>White</td>
          <td> 2 cm long, 6 petals. </td>
         <td>One flower bloom. Grows 15-25 cm in height.  </td> 
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Regionalspecies\Queenscup.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="Queenscup.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
       <tr>
         <td>Water Smartweed (Persicaria amphibia) </td>
         <td>Pink</td>
          <td> 30 cm long, five-lobbed petals. </td>
         <td> Found in ponds, streams and marshs, the perennial herb is an aquatic plant, but can grow in meadows. Grows 3 m in height.  </td> 
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Regionalspecies\Smartweed.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="Smartweed.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
       <tr>
         <td>Pale Evening-Primrose (Oenothera pallida) </td>
         <td>Yellow to White</td>
          <td> 30cm long, 4 petals. </td>
         <td> Flowers start white and fade to pink. Found in BC, Western US and Mexico. </td> 
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Regionalspecies\primrose.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="primrose.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
       <tr>
         <td>Canada Violet (Viola canadensis) </td>
         <td>White to Purple</td>
          <td> 30cm long, 5 petals. </td>
         <td> A perennial herb that grows widespread across Canada and the United States.  </td> 
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Regionalspecies\viola.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="viola.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
     </tbody>
   </table>
@@ -518,7 +517,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-  <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\0015.jpg" alt="Kalamoir"style="display: block; margin: auto;" width="350" height="500"><h5> Wildflowers in Kalamoir Regional Park </h5>
+  <img src="0015.jpg" alt="Kalamoir"style="display: block; margin: auto;" width="350" height="500"><h5> Wildflowers in Kalamoir Regional Park </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
   overflow: auto;
@@ -537,7 +536,7 @@ div.scroll-container img {
 
 
 <footer>
-  <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+  <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
