--- a/Rosespage.html
+++ b/Rosespage.html
@@ -138,7 +138,7 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/0011_26.jpg" alt="Flowers of the Okanagan" class="header-image" 
+<img src="0011_26.jpg" alt="Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
 <h1>Gardens of Kelowna</h1>
 <p>Beautiful Gardens</p>
