--- a/Sicillian.html
+++ b/Sicillian.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -571,10 +570,10 @@ text-align: center; /* Centers text horizontally */
     <div class="content">
         <h1>Sicillian Garden Design</h1>
         <p><h3> Giardino Bellini</h3> 
-         <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Sicily.jpg" alt="centered" width="500" height="350"</p>
+         <img src="Sicily.jpg" alt="centered" width="500" height="350"</p>
          <p> A public garden that dates back to 1854 when it was purchased by the Comune di Catana. It then has a maze, a labrynth and housed many animals within its enclosure; swans, deer, cows, an aviary, geese and monkeys. Large Palms tower over neatly trimmed hedges, water fountains on lawns of green. It is the oldest urban park in the region.</p>
          <p><h3>Giardino Ibleo</h3>
-        <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Ragusa.jpg" alt="centered" width="500" height="350"</p>
+        <img src="Ragusa.jpg" alt="centered" width="500" height="350"</p>
          <p> A 19th century garden located in the oldest parts of Ragusa, a historical gardens of the city. There are 16,000 sq meters over looking a valley below, with the river Contrada Arancelli. The oldest part of the gardens has ruins of the San Giorgio Church, the Capuchin Convent and the San Domenico Convent. With all the vegetation of Mediterranean origin, pink flowers and Judas Trees, the geometrically hsaped flower beds and central knool with a rotunda give this a classic Sicillian garden design.</p>
        <p> <h1> Key Garden Feautures</h1></p>
         <p> <h3> Courtyard Gardens</h3> 
@@ -582,7 +581,7 @@ text-align: center; /* Centers text horizontally */
         <p> <h3> Pergola Vines</h3> Strewn in Wisteria, Climbing Roses </p>
        
         </p>
-     <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/italianarch.jpg" alt="centered" width="500" height="350"</p>
+     <img src="italianarch.jpg" alt="centered" width="500" height="350"</p>
     </div>
 
     <!-- Sidebar -->
@@ -736,7 +735,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -756,7 +755,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
