--- a/Stuart.html
+++ b/Stuart.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -570,13 +569,13 @@ text-align: center; /* Centers text horizontally */
     <!-- Main Content -->
     <div class="content">
         <h1>Stuart Garden Design</h1>
-        <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Stuart.jpg" alt="centered" width="500" height="350"</p>
+        <img src="Stuart.jpg" alt="centered" width="500" height="350"</p>
         <p>  The combination of French gardens and Dutch formality created a larger, more extravagant result in pleasure grounds. 
         </p>
            <p><h2>Formal</h2>Avenues symbolized status, inspired by the palace of Versailles.</p>
                <p><h2>Terraces</h2>Italian terraces gave an organization of slopes, and controlled irregular natural landscapes.</p>
                    <p><h2>Parterres</h2> 
-                    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Anholt.jpg" alt="centered" width="200" height="350"</p><p>An evolution of the Tudor knots, these small hegdes are neatly manicured. 
+                    <img src="Anholt.jpg" alt="centered" width="200" height="350"</p><p>An evolution of the Tudor knots, these small hegdes are neatly manicured. 
                    </p>
         <p><h2>Fountains</h2>Animation of the gardens by flowing water displys. </p>
             <p><h2>Topiary</h2>The expression of complete control of nature.</p>
@@ -734,7 +733,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -754,7 +753,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
