--- a/USA18.html
+++ b/USA18.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -572,16 +571,16 @@ text-align: center; /* Centers text horizontally */
         <h1>18th Century United States of America Garden Design</h1>
         <p> Frederick Law Olmsted developed the U.S. National Park System. This includes Central Park in New York, and Prospect Park. The Colonial Period ranged from 1600-1775, and the American European garden designs remained "Old World", with plants being shipped overseas from Mainland China, England, and Europe like grass seed and clover. Native plants like tobacco, vegetabels, shrubs, vines, corn and wildflowers were shipped back to England. 
         </p>
-           <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/ElysianFieldsNY.jpg" alt=centered width="350" height="250"</p>
+           <img src="ElysianFieldsNY.jpg" alt=centered width="350" height="250"</p>
 
         <p> <h2> Colonial Garden Design </h2> 
             Rural gardens were planted surrounding structures: buildings, fences, livestock pens, walkways and surrounding work areas.</p>
-              <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/derbygarden1795.jpg" alt=centered width="350" height="250"</p>
+              <img src="derbygarden1795.jpg" alt=centered width="350" height="250"</p>
             <p>   
                 <p> <h2> Mount Vernon </h2> The 2,100 acre plantation of Fairfax County, on the edge of the Potomac River in Virgina, orignated in 1631 until 1861 before it was passed over to the Mount Vernon Ladies Association. George Washington, divided the property into five segments; the Mansion House, Muddy Hole, Union, River Farms, Dogue Run, which in all totalled 8,000 acres. The east lawn of the Mansion House, had a grove of trees that were translpanted from the property to create groves from the north and south sides of the house. </p>
-                <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/mtvernon.jpg" alt=centered width="350" height="250"</p>
+                <img src="mtvernon.jpg" alt=centered width="350" height="250"</p>
                 <p> <h2> Monticello</h2> The house of Thomas Jefferson located in Charlotteville, Piedmont region of Virginia was a 5,000 acre property.The house was built atop a mountain summit, with a Grotto on the north side of the property. Two paths allowed entry to the property, aligned on each side of the house, turning 90 degrees to meet the house on each side, creating a horseshoe shape from an aerial view. The garden was planted in a semi circle connecting at the path corners with the following: Persian Jasmine, Cape Jasmine, Lilac, Euonemide latifolia,  Daphne, in repeating order. Trees were planted to the East, the property also cultivated an orchard, vegetables, fruits a small greenhouse, and a vineyard. The Aviary was located on the Southeast Piazza. Improvements were made after his presidency, including a Piedmont Clay terrace, oval flower bedding, a garden wall and the integration of farm and garden elements of serpentine, or irregular designs. The influence of the 1728 publishing of 'New Principles of Gardening'. Plantings consisted of an arrangment of shrubs, Altheas, Azalea, Brambles, Broom, Calycanthus, Dogwood, Euonymous, Fringe Tree, Gelder Rose, Halesia, Honeysuckle, Hyacanthus, Kalmia, Lilac, Magnolia Glauca, Mezereon, Oleander, Red Bud, Wild Crab, Quamoclid, Rhododendron, Service Tree, Privet, and Scotch broom covered the pleasure grounds.</p>
-                 <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/gelder rose.jpg" alt=centered width="350" height="250"</p>
+                 <img src="gelderrose.jpg" alt=centered width="350" height="250"</p>
     </div>
 
     <!-- Sidebar -->
@@ -734,7 +733,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -754,7 +753,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
