--- a/USACapital.html
+++ b/USACapital.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -572,16 +571,16 @@ text-align: center; /* Centers text horizontally */
         <h1>The Garden Design of the U.S. Capital</h1>
         <p> <h2>Grounds of the National Mall </h2> The National Mall extends from the base of Capital Hill, to the Washington Monument. Dating back to March 1791, during the presidensy of Thomas Jefferson who laid out the plans and created a recreational ground, and public space that is a key landmark in American history. The scenic space is bordered by gardens, a 1.6 km long, and  650 meters wide, leading to the Potomac River. On the east side, began a Botanical garden in 1821, that included a pond, hedge, gravel paths and native plants, trees and shrubs, surrounding the enclosure. English style serpentine paths would flow throughout, with contracting symmetry, and formal geometric patterns as one approaches the Capital. In 1845, 2,000 indigenous trees, and 200 different species and varieties of trees were planted on the Mall, creating a romantic aesthtic. The network of meandering walks, gardens and groves is both an educational site to visit, as well as a national park. The Mall is continuously improved throughout this period and into the 21st Century. 
         </p>
-        <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/plansofNationalMall.jpg" alt=centered width="550" height="300"</p>
+        <img src="plansofNationalMall.jpg" alt=centered width="550" height="300"</p>
         <p> <h2> Gardens of the Whitehouse </h2> 
             <h3> The Rose Garden </h3> The Rose Garden was created in 1903 by First Lady Edith Roosevelt in a colonial-style garden design. It is located  next to the West Wing and West Terrace of the Whitehouse. The most recent update to the garden was in 2020, initiated by First Lady Melania Trump. The grass panel was crested by Rachel Lambert Mellon in 1962, and three of the four original Magnolias planted remain to commemorate President Kennedy.</p>
-             <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/RosegardenWhitehouse.jpg" alt=centered width="550" height="300"</p>
+             <img src="RosegardenWhitehouse.jpg" alt=centered width="550" height="300"</p>
             <p><h3> The Jaqueline Kennedy Garden </h3> Reffered to as the First Lady's Garden, it was fist developed in 1903 by First Lady Edith Roosevelt, located to the south of the East Terrace Colonnade. It was designed as a Italian Tuscan style garden during President Woodrow Wilson's wife, First Lady Ellen Wilson planted it. It was redesigned during the Kennedy administration, and completed during the Lyndon B. Johnson presidency. First Lady Claudia "Lady Bird" Johnson dedicated the name to former First Lady Jaqueline Kennedy. </p>
-             <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/KennedyGarden.jpg" alt=centered width="550" height="300"</p>
+             <img src="KennedyGarden.jpg" alt=centered width="550" height="300"</p>
              <p><h3> Children's Gardens</h3> In 1969, President Lyndon B. Johnson and First Lady Claudia Johnson created the Children's Garden. There are over 30 bronze sculptures of President's grandchildren, with handprints and footprint castings. </p>
              <p><h3>Kitchen Garden</h3> In 2009, First Lady Michelle Obama planted a one acre kitchen vegetable garden. In 2021, First Lady Jill Biden added flowers to the North of the South Lawn.
         </p>
-         <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Whitehouse1802.jpg" alt=centered width="550" height="300"</p>
+         <img src="Whitehouse1802.jpg" alt=centered width="550" height="300"</p>
        <a href="https://home.nps.gov/whho/learn/historyculture/rose-garden.htm">Whitehouse Gardens</a>
 
     </div>
@@ -738,7 +737,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -758,7 +757,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
