--- a/Webstore.html
+++ b/Webstore.html
@@ -131,9 +131,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -439,21 +438,21 @@ button:hover {
   <!-- SHOP -->
   <div class="shop">
     <div class="product">
-      <img src="https://via.placeholder.com/300">
+      <img src="300">
       <h3>Aprons</h3>
       <p>$20.00</p>
       <button onclick="addToCart('Product A', 20)">Add to Cart</button>
     </div>
 
     <div class="product">
-      <img src="https://via.placeholder.com/300">
+      <img src="300">
       <h3>Garden Gloves</h3>
       <p>$35.00</p>
       <button onclick="addToCart('Product B', 35)">Add to Cart</button>
     </div>
 
     <div class="product">
-      <img src="https://via.placeholder.com/300">
+      <img src="300">
       <h3>Visor</h3>
       <p>$15.00</p>
       <button onclick="addToCart('Product C', 15)">Add to Cart</button>
@@ -1870,7 +1869,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\C2EB6.jpg" style="display: block; margin: auto;" width="470" height="470">
+    <img src="C2EB6.jpg" style="display: block; margin: auto;" width="470" height="470">
     <h5></h5>
 
 <style> 
@@ -1983,7 +1982,7 @@ button {
 </div>
 
 <footer>
-  <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+  <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
