--- a/home.html
+++ b/home.html
@@ -132,9 +132,9 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
+<h1></h1>
 </div>
 
 <nav>
@@ -354,7 +354,7 @@ text-align: center; /* Centers text horizontally */
 <section>
           <h2 id="features"></h2> 
           <p>
-<img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Logos\KelownaFlowerGardensLogo.png" alt="Centered Image" style="display: block; margin: auto;" width=500" height="500">
+<img src="KelownaFlowerGardensLogo.png" alt="Centered Image" style="display: block; margin: auto;" width=500" height="500">
 </p>
          <p>Kelowna Flower Gardens aims to bring together local gardeners who are passionate about caring for their community in the form of creating masterful works in raising a variety of species of flowers.</p>
 
@@ -371,7 +371,7 @@ text-align: center; /* Centers text horizontally */
     <a href="regional species.html">
       <div class="container">
         <div class="centered">
-        <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\0030_5.jpg" alt="Centered Image" style="width:840px; height:auto;">
+        <img src="0030_5.jpg" alt="Centered Image" style="width:840px; height:auto;">
   <div class="overlay">Cusick's Serviceberry (Amelanchier cusickii)</div></div>
   <style>
     * {box-sizing: border-box } 
@@ -444,7 +444,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\0030_5.jpg" style="display: block; margin: auto;" width="550" height="350">
+    <img src="0030_5.jpg" style="display: block; margin: auto;" width="550" height="350">
     <h5></h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -461,7 +461,7 @@ div.scroll-container img {
 
 
 <footer>
-  <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+  <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 <div class="muted"></div>
 <div class="muted"></div>
@@ -470,6 +470,4 @@ div.scroll-container img {
 
 </body>
 </html>
-
-
 
