--- a/About.html
+++ b/About.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -359,7 +358,7 @@ text-align: center; /* Centers text horizontally */
           She has always been interested in flora of all around the world and has documented types of species on trips that have extended from South America and remote regions of British Columbia's North, to the Great Lakes of Northern Ontario and the Coastal Pacific Region of Southern California. She hopes to bring her passion to the Okanagan, where she calls home, and to see what an enthusiatic group of people can grow this organization into the future.</p>
 
 <p>
-           <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\CSC_0319.jpg" alt="Centered Image" style="display: block; margin: auto;" width="800" height="350"> </img>
+           <img src="CSC_0319.jpg" alt="Centered Image" style="display: block; margin: auto;" width="800" height="350"> </img>
          </p>
 
          </p>
@@ -384,7 +383,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\C2EB6.jpg" style="display: block; margin: auto;" width="470" height="470">
+    <img src="C2EB6.jpg" style="display: block; margin: auto;" width="470" height="470">
     <h5></h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -400,7 +399,7 @@ div.scroll-container img {
 </div>
 
 <footer>
-  <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+  <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
