--- a/Biltmore.html
+++ b/Biltmore.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -571,30 +570,30 @@ text-align: center; /* Centers text horizontally */
     <div class="content">
         <h1>The Garden Design of the Biltmore Estate</h1>
         <p> The Biltmore Estate is one of North America's most impressive 120,000 acres estates, built in 1889 for George Washington Vanderbilt II. The renowned architected Frederick Law Olmsted created the 75 acres formal garden designs.</p> 
-        </p><img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/PergolaWisteria.jpg" alt=centered width="550" height="300"</p>
+        </p><img src="PergolaWisteria.jpg" alt=centered width="550" height="300"</p>
 <p><h2>Azalea Garden</h2> The Azalea Gardens were curated in 1930 and is home to over 20,000 plants. 15 acres of winding paths traverse through the native Azaleas and Redwoods. With every shade of pink you can imagine.
-</p><img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/azaleas.jpg" alt=centered width="550" height="300"</p>
+</p><img src="azaleas.jpg" alt=centered width="550" height="300"</p>
    <p><h2>Bass Pond</h2> The six-acre body of water was created over 125 years ago, for boating and enjoying.
-   </p><img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Bass-pond.jpg" alt=centered width="550" height="300"</p>
+   </p><img src="Bass-pond.jpg" alt=centered width="550" height="300"</p>
      <p><h2>Butterfly Garden</h2> The flowers and herbs of the Butterfly Garden draw from Olsted's original list of plants used:
         Alpine Poppy (Papaver alpinum), Black-eyed Susan (Rudbeckia), Blazing Star (Liatris spicata), Creeping Phlox (Phlox subulata) Fountaingrass (Pennisetum), Joe Pye Weed (Eupatorium purpureum), Sage (Salvia), Goldenrod (Solidago),  Tickseed (Coreopsis), Wild Indigo (Baptisia australis), Willowleaf Sunflower (Helianthus salicifolius). 
-     </p><img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/walledgarden.jpg" alt=centered width="550" height="300"</p>
+     </p><img src="walledgarden.jpg" alt=centered width="550" height="300"</p>
 
       <p><h2>Conservatory</h2> This year round Tropical Oasis orignated in 1895, embodies the 19th century passion of horticulture. It's glass enclosed building has exotic Orchids, Ferns and Palms, Hibiscus and Bougainvillea, Chrysanthemums, Pointsettas and Amaryllis. Many rooms contain different collections of plants: the Palm House, the Cool House, Hot House, Orchid Room, Sitting Room, Cactus Room, Potting Room.
-        </p><img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/SittingRoom.jpg" alt=centered width="550" height="300"</p>
+        </p><img src="SittingRoom.jpg" alt=centered width="550" height="300"</p>
 
         <p><h2>Italian Garden</h2> The Italian Gardens parrallel the plans from 1895. The ponds of the Italian garden host koi fish, exotic water lilies, tropical bananas and papyrus. 
-        </p><img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/BiltmoreItalian.jpg" alt=centered width="550" height="300"</p>
+        </p><img src="BiltmoreItalian.jpg" alt=centered width="550" height="300"</p>
        
            <p><h2>Rose Garden</h2>Over 120 years of history, the Rose Garden is twice the size since its beginnings. 
-           </p><img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/RoseWalled.jpg" alt=centered width="550" height="300"</p>
+           </p><img src="RoseWalled.jpg" alt=centered width="550" height="300"</p>
         <p><h2>Shrub Garden</h2>
-        Located between the Italian Garden and the Walled Garden, the Shrub Garden spans 10 acres and over 500 plant varieties. The winding paths and lush plants, offering a subtle beauty to contrast's Olmsteds other garden designs.</p><img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/walledgarden.jpg" alt=centered width="550" height="300"</p>
+        Located between the Italian Garden and the Walled Garden, the Shrub Garden spans 10 acres and over 500 plant varieties. The winding paths and lush plants, offering a subtle beauty to contrast's Olmsteds other garden designs.</p><img src="walledgarden.jpg" alt=centered width="550" height="300"</p>
         <p> The Spring garden has Forsythia planted with Spirea amid White Pines and Hemlocks.</p>
         <p> Styrax Japonicus, Japonese Snowbell, Japonese Maples, Golden Rain Tree, Riber Birch, 
 
            <p><h2>Walled Gardens</h2> A Formal garden ayout, with geometric beds, and a variation of colours and textures. There are 250 modern bright blooming flowers:  Sunflowers, Asters, Chrysanthemums, Dahlias, Cacading Petunias, Roses, Oramental Grasses, Tulips. 
-           </p><img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Walledparterre.jpg" alt=centered width="550" height="300"</p>
+           </p><img src="Walledparterre.jpg" alt=centered width="550" height="300"</p>
            
     </div>
 
@@ -747,7 +746,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -767,7 +766,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
