--- a/Boardmembers.html
+++ b/Boardmembers.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -362,7 +361,7 @@ text-align: center; /* Centers text horizontally */
   <div>
           <h2 id="features">Board Members</h2>
          <p> 
-<img src="C:\Users\geosi\OneDrive\Pictures\SRAUHALA.jpg" alt="Avatar" class="avatar">
+<img src="SRAUHALA.jpg" alt="Avatar" class="avatar">
 <h5> Silken Rauhala BSc. </h5>
          </p>
        </div>
@@ -387,7 +386,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\C2EB6.jpg" style="display: block; margin: auto;" width="470" height="470">
+    <img src="C2EB6.jpg" style="display: block; margin: auto;" width="470" height="470">
     <h5></h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -403,7 +402,7 @@ div.scroll-container img {
 </div>
 
 <footer>
-  <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+  <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
