--- a/Chinese.html
+++ b/Chinese.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -578,7 +577,7 @@ text-align: center; /* Centers text horizontally */
         <p><h2> Pagoda's </h2> Arching roofs, with four pillas act as shelters and sacred spaces in Chinese gardens.<p>
         <p> <h2> Ponds</h2> Moving water offers tranquility and peaceful environments</p>
         <p> <h2> Rock Gardens</h2> An integral element to Classical Chinese Gardnes. The rocks garden symbolizes virtue, and a central part of the Isles of Immortals. </p>
-        <p> <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Chinese.jpg" alt=centered width="350" height="300"</p>
+        <p> <img src="Chinese.jpg" alt=centered width="350" height="300"</p>
     </div>
 
     <!-- Sidebar -->
@@ -731,7 +730,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -751,7 +750,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
