--- a/Corbusier.html
+++ b/Corbusier.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -570,7 +569,7 @@ text-align: center; /* Centers text horizontally */
     <!-- Main Content -->
     <div class="content">
         <h1>Corbusier Garden Design</h1>
-        <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Corbusier.jpg" alt="centered" width="500" height="350"</p>
+        <img src="Corbusier.jpg" alt="centered" width="500" height="350"</p>
         <p>Corbusier's Designs of Architecture are renowned worldwide, and the legacy of his structures are recognized in the landscape design of Rooftop and Terrace gardens. Much of his work is concentrated on City, Urban and Villas, the emphasis on gardens and buildings is incorporated in his forward thinking designs. 
          </p>
      
@@ -727,7 +726,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -747,7 +746,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
