--- a/DanKiley.html
+++ b/DanKiley.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -570,11 +569,11 @@ text-align: center; /* Centers text horizontally */
     <!-- Main Content -->
     <div class="content">
         <h1>Dan Kiley Garden Design</h1>
-         <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/DallasMuseumofArt.jpg" alt="centered" width="500" height="350"</p>
+         <img src="DallasMuseumofArt.jpg" alt="centered" width="500" height="350"</p>
         <p>  Dan Kiley made monumental contribution in modernism of landscape architecture and design. He received the National Medal of Arts at the age of 84. His inspiration of the European countryside, French gardens. post war planting grid created spacious, social and artistic venues. A Checkerboard garden in Tampa, Florida was made to par tribute to his works.   </p>
         <p> Notable Projects: Consitution Gardens, Banneker Park - Washington D.C, Independance Mall in Philidelphia, Rockefeller University, United States Air Force Academy - Colorado Springs, Cudahy Gardens - Milwaukee, Dallas Museum of Art, and others. </p>
-               <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Kiley.jpg" alt="centered" width="500" height="350"</p>
-                      <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/DanKiley.jpg" alt="centered" width="500" height="350"</p>
+               <img src="Kiley.jpg" alt="centered" width="500" height="350"</p>
+                      <img src="DanKiley.jpg" alt="centered" width="500" height="350"</p>
                          
     </div>
 
@@ -728,7 +727,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -748,7 +747,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
