--- a/Dutch.html
+++ b/Dutch.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -572,7 +571,7 @@ text-align: center; /* Centers text horizontally */
         <h1>18th Century Dutch Garden Design</h1>
         <p>Holland was undergonig a roaring flower market when Tulip propogation flourished in the 1600's. Dutch gardens are characterized in color-schemed, mass plantings of (5 dozen) bulbs. Traditional gardens would have clusters, in grouped patterns (at least 12 bulbs a group). 
         </p>
-         <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Dutchtulip.jpg" alt=centered width="500" height="350"" 
+         <img src="Dutchtulip.jpg" alt=centered width="500" height="350"" 
         <p> Flowers in a Dutch Garden: </p>
         <p><h3>Anemones</h3></p>
         <p> <h3>Calla Lily</h3></p>
@@ -583,7 +582,7 @@ text-align: center; /* Centers text horizontally */
         <p> <h3>Tulips</h3></p>
 
     <p> The Formal Dutch Gardens would have rows of flowers, and ornamental hedges. The strucutre would be enhanced with canals and fountains were unique because of their order, seasonal planting and precision.</p> 
-         <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Dutchgarden.jpg" alt=centered width="500" height="350"</p> 
+         <img src="Dutchgarden.jpg" alt=centered width="500" height="350"</p> 
     </div>
 
     <!-- Sidebar -->
@@ -737,7 +736,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -757,7 +756,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
