--- a/Formal.html
+++ b/Formal.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -571,7 +570,7 @@ text-align: center; /* Centers text horizontally */
     <div class="content">
       <h1>Formal Renaissance Garden Design</h1>
         <p> Classic formal English design includes neatly trimmed hedges with symmetrical layouts, manicured lawns that surround central points; statues, water features and patios or courtyards. These gardens symbolize timeless beauty that have an emphasis on refinement. </p>
-         <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/formal.jpg" alt=centered width="350" height="350""</p>
+         <img src="formal.jpg" alt=centered width="350" height="350""</p>
 <p> <h2>Symmetry</h2> Using the natural landscapes of the property, designing the lines for a symmetric garden will result in a formal essence. Use appropriate scale and proportions, and create a sense of rhythm.</p>
 <p> <h2>Evergreens</h2> Topiary, shrubs, structural plants and hedges create a strong architecture when neatly arranged, surround the enclosure and are clipped in a classical look.  
 </p>
@@ -602,7 +601,7 @@ Adding a variety in height to the garden </p>
         </p>
 <p> <h1>Knot</h1> 
         A Knot Garden dates back to the middle ages, much like a monastic garden it consists of herbs, medicinal plants and is similar in that it is often referred to as “the embroidery of the earth”. Knot gardens are the predecessor of Parterre Gardens. </p>
-         <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Parterre3.jpg" alt=centered width="350" height="250""</p>
+         <img src="Parterre3.jpg" alt=centered width="350" height="250""</p>
 <p> Symmetrical beds, evergreen hedges neatly clipped in repeating ornamental designs with gravel paths throughout.</p> 
 
 <p> These gardens require a high level of maintenance and upkeep. </p> 
@@ -771,7 +770,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -791,7 +790,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
