--- a/GardenDesign.html
+++ b/GardenDesign.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -574,7 +573,7 @@ text-align: center; /* Centers text horizontally */
         <p>Inspiration of modern gardens is sourced from the ancient world, where evidence of gardening dates back to Egypt, Babylon, Persia and Chinese gardens predate 200 BC with complex engineering.</p>
         <p>As we move through time and a variety of regions, subtle inspiration and grandiose masterpeices of the historic gardens can be found around the world. </p>
 
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Kew.jpg" alt=centered width="550" height="300"</p></div>
+<img src="Kew.jpg" alt=centered width="550" height="300"</p></div>
     <!-- Sidebar -->
     <div class="sidebar" id="sidebar">
 <a href="GardenDesign.html">Garden Design</a>
@@ -725,7 +724,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -745,7 +744,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
