--- a/GreekandHellenistic.html
+++ b/GreekandHellenistic.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -572,7 +571,7 @@ text-align: center; /* Centers text horizontally */
         <h1> Greek and Hellenistic Garden Design</h1>
         <p>During the Hellenistic period, gardens were created as artistic expression refined with meticulous layouts and the use of water features. The designs originated from the concept of a paradise garden; characterized with trees of fruit, water and flowers. Symbolism in architecture was a pillar in the Hellenistic landscape often using mythology depicting gods and goddess in sculptures. Gardens played a role for socializing, philosophical discourse and showcasing wealth. Symmetry and geometric shapes that echoed principles of order provided a sanctuary. </p>
         <p></p>
-        <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Columns.jpg" alt=centered width="550" height="300"</p>
+        <img src="Columns.jpg" alt=centered width="550" height="300"</p>
     </div>
 
     <!-- Sidebar -->
@@ -725,7 +724,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -745,7 +744,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
