--- a/Lombardian.html
+++ b/Lombardian.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -572,32 +571,32 @@ text-align: center; /* Centers text horizontally */
         <h1>Lombardian Garden Design</h1>
         <p>The region of Lombardy is unique with terrace gardens, olive trees, layers of landscapes with gravel paths, sculputes surrounded by flowering plants with Mediterranean architecture. The rich history and closeness with the natural environment in this vast region give the impression of endless options for garden lovers visit, and find inspiration.</p>
   
-    <p> <h2>Bald Cypresses of the Montanelli Gardens</h2> <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Montanelli_1.jpg" alt=centered width="550" height="350"</p>
+    <p> <h2>Bald Cypresses of the Montanelli Gardens</h2> <img src="Montanelli_1.jpg" alt=centered width="550" height="350"</p>
         <p>
     Taxodium distichum, the Bald Cypress have a 2.3 m diameter and are 25 m tall, the largest tree in Lombardy. The Gardens covers 172 sq m and were completed in 1784, with additions of a Planetarium and Museum of Natural Sciences to the park.</p>
    
-    <p><h2> Vedano al Lambro </h2>  <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Mirabello.jpg" alt=centered width="550" height="350"</p>
+    <p><h2> Vedano al Lambro </h2>  <img src="Mirabello.jpg" alt=centered width="550" height="350"</p>
  <p>   Vedano al Lambro is a small village overlooking the Park of Monza. With centuries old trees, terraces' and Villa Mirabello built in the late 18th century. </p>
    
     <p> <h2>Cascina Rosa Botanical Gardens</h2>
     Over a kilometer of paths outline lawns and flower beds of; Azaleas, camellias, pines, oaks, willows flourish in the gardens. Greenhouses cultivate of 1500 plants. </p>
-    <p> <h2>Botanical Gardens of Pavia</h2>    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Pavia.jpg" alt=centered width="550" height="350"</p>
+    <p> <h2>Botanical Gardens of Pavia</h2>    <img src="Pavia.jpg" alt=centered width="550" height="350"</p>
         <p>Founded in the XVII century, the park hosts a Arboretum, rose orchards and tropical flora. The parterre quad has a formal style with trees planted throughout the property that is nestled by the Ticino River. </p>
  
     <p> <h2>Royal Gardens of Monza</h2>
-          <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Monza.jpg" alt=centered width="550" height="350"</p>
+          <img src="Monza.jpg" alt=centered width="550" height="350"</p>
           <p>
     Monza is one of the largest historical parks in Europe thats entirely enclosed by walls. The formal garden, Villa Reale, and agricultural plots, a pond, grotta, temple, with a geometric layout of the park. </p>
    
     <p> <h2>Gardens of Como </h2>
-        <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Carlotta.jpg" alt=centered width="550" height="350"</p>
+        <img src="Carlotta.jpg" alt=centered width="550" height="350"</p>
         <p>
     Villa Carlotta is one example of an exceptional Botanical Garden and surroudning 20 acres of park on the shores of Como. An English style romantic garden of the late 19th century.</p>
      
-    <p> <h2>Gardens Milan</h2><img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Milan.jpg" alt=centered width="550" height="350"</p><p>
+    <p> <h2>Gardens Milan</h2><img src="Milan.jpg" alt=centered width="550" height="350"</p><p>
     Brera Bontanical Garden, Cascina Rosa, Lake Maggiore and Guastella Garden are all perfect escapes in a culturally immersive region. </p>
     
-    <p> <h2>Varese - The Garden Province </h2> <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Varese-1.jpg" alt=centered width="550" height="350"</p><p>
+    <p> <h2>Varese - The Garden Province </h2> <img src="Varese-1.jpg" alt=centered width="550" height="350"</p><p>
     The site originates to the 16th century, with a range of uses that have developed over time. In the 18th century, Palazzo Estense remains symbolic with its characteristic fountain; 'Swan' Lake, geometric flowerbeds, French style gardens. The garden city displays terraces, manicured gardens and archaeological features throughout the villas, cobblestone roads, cafes, courtyards and monuments.  </p>
     </div>
 
@@ -753,7 +752,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -773,7 +772,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
