--- a/MedievalEnglish.html
+++ b/MedievalEnglish.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -570,7 +569,7 @@ text-align: center; /* Centers text horizontally */
     <!-- Main Content -->
     <div class="content">
         <h1>Medieval English Garden Design</h1>
-        <p> <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/TreCloisterGarden.jpg" alt=centered width="550" height="350"" </p> 
+        <p> <img src="TreCloisterGarden.jpg" alt=centered width="550" height="350"" </p> 
         <p><h3>Henry V (1413-1422)</h3>
             The Garden of Windsor Castle, surrounded by a stone wall, flowers and planted trees.
 
@@ -760,7 +759,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
