--- a/Monastic.html
+++ b/Monastic.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -571,7 +570,7 @@ text-align: center; /* Centers text horizontally */
     <div class="content">
         <h1> Monastic Garden Design</h1>
         <p>The Monasteries in Europe up until the year 1500 build  extensive gardens that were as self-sufficient as possible. The Benedictine monasteries for example, had extensive gardens that could supply sustenence for the entire community. These were walled gardens that kept nature separate. Gardens were practical, and nature was not. The Monks cloister's often had four paths, and four squares representative of the four rivers of Jerusalem. Monks had a vegetarian diet for the most part, and the gardens tended to contain high starch vegetables, herbs and garlic for medicinal purposes.</p> 
-        <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/spring-avebury-house-garden-wiltshire.jpg" alt=centered width="550" height="350"" 
+        <img src="spring-avebury-house-garden-wiltshire.jpg" alt=centered width="550" height="350"" 
         <p> <h3> Fountains</h3>
         In these biblical grounds, monks and nuns would use water to represent the Holy Trinity; the three states of water 1. Still 2. Moving 3. Sparkling. </p>
         <p> <h3> Labrynths</h3>
@@ -733,7 +732,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -753,7 +752,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
