--- a/Roses.html
+++ b/Roses.html
@@ -9,7 +9,7 @@
 </body>
   </head>
   <body>
-  <h1>Kelowna Flower Gardens'</h1>
+  <h1>Kelowna Flower Garden's</h1>
   <p>Kelowna's Flower Garden Club</p> 
   <style>
 
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -482,20 +481,20 @@ text-align: center; /* Centers text horizontally */
         <td>Rose to Pink</td>
         <td>6.35 - 8.9 cms Double (20-30 petals), slight fragrence</td>
         <td> Leathery, light green, very vigorous, disease resistant</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\firstlove.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="firstlove.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
       <tr>
         <td>Confidence (1951)</td>
         <td>Light to Yellow</td>
          <td>Large Double (28 - 38 petals), moderate fragrence</td>
         <td> Dark, leathery, vigorous, bushy</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\confidence.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="confidence.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       <tr>
         <td>Red Masterpeice (1974)</td>
         <td>Dark Red</td>
          <td>15.25 cm Double (35-40 petals), heavy fragrence</td>
         <td> Dark, leathery, mildews, profuse blooming</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\redmasterpeice.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="redmasterpeice.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
     </tbody>
   </table>
@@ -552,19 +551,19 @@ text-align: center; /* Centers text horizontally */
         <td>Deep rose- white</td>
          <td>8.89 cm Double (25 petals), moderate fragrence</td>
         <td> Glossy, grey-green; very prolific blooming</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\bonbon.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="bonbon.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       <tr>
        <td>Garnet (1951)</td>
         <td>Garnet-red/yellow</td>
          <td> 2.5-5.1 cm Double (50 petals), slight fragrence, long lasting flowers</td>
         <td> Dark, leathery, susceptible to mildews</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\garnet.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="garnet.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
   <tr>
        <td>Vogue (1951)</td>
         <td>Cherry Coral</td>
          <td>8.89 - 10.25 cm Double (30-35 petals), moderate fragerance</td>
         <td> Glossy, leathery; vigorous, upright, bushy</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\vogue.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="vogue.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
     </tbody>
   </table>
@@ -616,21 +615,21 @@ text-align: center; /* Centers text horizontally */
         <td>Golden copper</td>
          <td>10.25 cm Double (35-40 petals), moderate fragrence</td>
         <td> Dark, semi-glossy, tall</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\arizona.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="arizona.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
       <tr>
        <td>Mount Shasta (1963)</td>
         <td>White</td>
          <td>10.25 - 12.6 cm cm Double (20-26 petals), moderate fragrence</td>
         <td> Leathery, semi-glossy, good for cool climates</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\mountshasta.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="mountshasta.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
       <tr>
        <td>Queen Elizabeth (1954)</td>
         <td>Carmine-rose  to dawn-pink</td>
          <td>8.89 - 10.25 cm Double (45-55 petals), moderate fragrence</td>
         <td> Glossy, vigorous, prolific</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\queenelizabeth.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="queenelizabeth.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
     </tbody>
   </table>
@@ -682,21 +681,21 @@ text-align: center; /* Centers text horizontally */
         <td>Pink</td>
          <td>10.25 cm Double (35-40 petals), heavy fragrence</td>
         <td> Dark, large-flowered climber, low-growing</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\blossomtime.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="blossomtime.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
       <tr>
         <td>Coral Satin (1960)</td>
         <td>Coral</td>
          <td>8.89 - 10.25 cm Double (25 petals), moderate fragrence</td>
         <td> Glossy, leathery, Large-flowered climber, profuse bloom</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\coralsatin.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="coralsatin.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
       <tr>
         <td>Golden Showers (1956)</td>
         <td>Daffodil-yellow</td>
          <td>12.6 cm Double (20-35 petals), moderate fragrence</td>
         <td> Dark, glossy, Large-flowered climber;long almost thornless stems</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\goldenshowers.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="goldenshowers.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
     </tbody>
   </table>
@@ -751,42 +750,42 @@ text-align: center; /* Centers text horizontally */
         <td>Cardinal Red</td>
          <td> 2.5 - 3.9 cm Double, heavy fragrence</td>
         <td> Glossy, leathery, abundant bloom</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\beautysecret.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="beautysecret.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
       <tr>
         <td>Fire Princess (1969)</td>
         <td>Orange-red</td>
          <td>4.5 cm Double, no fragrence</td>
         <td> Glossy, leathery, vigorous, bushy</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\Fireprincess.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="Fireprincess.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
       <tr>
         <td>Judy Fisher (1968)</td>
         <td>Rose-pink</td>
          <td>3.9 cm Double, no fragrence</td>
         <td> Glossy, leathery, Large-flowered climber, profuse bloom</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\judyfisher.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="judyfisher.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
       <tr>
         <td>Lavendar Lace (1968)</td>
         <td>Lavendar</td>
          <td>3.9 cm Double, moderate fragrence</td>
         <td> Glossy, vigorous and bushy</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\lavendarlace.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="lavendarlace.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
       <tr>
         <td>Over the Rainbow (1974)</td>
         <td>Red and yellow</td>
          <td>4.5 cm Double, no fragrence</td>
         <td> Leathery, medium green; abundant, continuous bloom</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\overtherainbow.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="overtherainbow.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
       </tr>
       <tr>
         <td>Windy City (1974)</td>
         <td>Pink</td>
          <td>2.5 cm cm Double, slight fragrence, long lasting</td>
         <td> Bronzy; disease resistant</td>
-        <td> <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\windycity.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
+        <td> <img src="windycity.jpg" alt="Centered Image" style="display: block; margin: auto;" width="100" height="100"> </img></td>
     </tbody>
   </table>
 </body>
@@ -812,7 +811,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Roses\9524E.jpg" style="display: block; margin: auto;" width="550" height="350">
+    <img src="9524E.jpg" style="display: block; margin: auto;" width="550" height="350">
     <h5></h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -829,7 +828,7 @@ div.scroll-container img {
 
 
 <footer>
-  <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+  <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
