--- a/Shop.html
+++ b/Shop.html
@@ -131,9 +131,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -454,7 +453,7 @@ header {
   <!-- SHOP -->
   <div class="shop">
     <div class="product">
-      <img src="https://via.placeholder.com/300">
+      <img src="300">
       <h3>Product A</h3>
       <p class="price">$20</p>
      <div id="paypal-button-container"></div>
@@ -462,7 +461,7 @@ header {
     </div>
 
     <div class="product">
-      <img src="https://via.placeholder.com/300">
+      <img src="300">
       <h3>Product B</h3>
       <p class="price">$35</p>
       <div id="paypal-button-container"></div>
@@ -470,7 +469,7 @@ header {
     </div>
 
     <div class="product">
-      <img src="https://via.placeholder.com/300">
+      <img src="300">
       <h3>Product C</h3>
       <p class="price">$15</p>
     <div id="paypal-button-container"></div>
@@ -537,7 +536,7 @@ function checkout() {
 
 
 <footer>
-  <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+  <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
