--- a/Spain.html
+++ b/Spain.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -572,17 +571,17 @@ text-align: center; /* Centers text horizontally */
         <h1>18th Century Spanish Garden Design</h1>
         <p> Spanish Gardens are inspried by Medeterranean greenery, terracotta pots and planters, with lots of flowing water in ponds or fountains. You will commonly see wrought iron built around stone and tile patios and courtyards.
         </p>
-        <p> <h2>Royal Palace of La Granja</h2>         <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Granja.jpg" alt=centered width="500" height="350"</p>
+        <p> <h2>Royal Palace of La Granja</h2>         <img src="Granja.jpg" alt=centered width="500" height="350"</p>
         <p>The summer residence of the King of Spain in the 18th century, the Palace was designed in Baroque style. The formal gardens extend of 1,500 acres (6.1 squared Km) in French style. Using natural slopes to enhance axial persperctives. There are outlining hedges and flower beds in concentric design, twenty six sculptures and fountains, all of which represent greek deities, allegories, and mythic scenes.  
         </p>
 
-         <p> <h2>Royal Palace of Madrid</h2> <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/royal-palace-madrid-spain.jpg" alt=centered width="500" height="350"</p>
+         <p> <h2>Royal Palace of Madrid</h2> <img src="royal-palace-madrid-spain.jpg" alt=centered width="500" height="350"</p>
          <p>
             With the Palace starting its legacy in the 860's, it holds the title for the largest in all of Europe, impressively over 1,450,000 sq ft. The Campo del Moro Gardens were built in year 1109 in a Romantic Style. A Triton fountain from the Islet Garden of Aranjuez and one from the Palace of Infante don Luis at Boadilla del Monte known as Fountain of Shells are vivsible in the Paseo Principal, the lawn extending from the Palace. The gardens were re-landscaped in the 19th century. The Sabatini Gardens are based on the Italian architect who designed them in 1933, in a French design. There is a large pond surrounded by fountains and statues of Spanish Kings. The gardens are situated on a terrace allowing stunnung views. The Parterre garden is the 18th century spectacle that is the main formal attraction to the site. French inspired, with flower beds, neat hedges, fountains and sculptures. The Queen's garden, Jardines de la Reina is another 18th century design, a labrynth style parterre mixed of formal and informal designes. The Prince's garden has charming pavillions of marble, in ponds with water features in this smaller 19th century garden. Finally, the Royal Palace Plaze is the glamorous grandeur one would expect to match Europes, grandest dwelling. There is a variety of sculptures and fountains in a coutryard surrounded by trees, flower beds and symmetrical walking paths. 
          </p>
           
-           <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Madrid2.jpg" alt=centered width="500" height="350"</p>
-            <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Madrid1.jpg" alt=centered width="500" height="350"</p>
+           <img src="Madrid2.jpg" alt=centered width="500" height="350"</p>
+            <img src="Madrid1.jpg" alt=centered width="500" height="350"</p>
     </div>
 
     <!-- Sidebar -->
@@ -736,7 +735,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -756,7 +755,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
