--- a/Tudor.html
+++ b/Tudor.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -571,7 +570,7 @@ text-align: center; /* Centers text horizontally */
     <div class="content">
         <h1>Tudor Garden Design</h1>
         <p> With origins inspired by the English Renaissance commenmorating decorative flower, well maintained topiary, walled enclosures, with pathways and arbors that blend history and sophisticated garden elements. Tudor design dates back to the 16th century. 
-        </p>    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Tudor.jpg" alt="centered" width="500" height="350"</p>
+        </p>    <img src="Tudor.jpg" alt="centered" width="500" height="350"</p>
         <p><h2>Knot Gardens</h2>
         Shrubs are planted next to geometirc beds that are cut down to create a low hedge box.</p>
          <p><h2>Flowers</h2>
@@ -584,7 +583,7 @@ text-align: center; /* Centers text horizontally */
             The hunting grounds provided sustanance throughout the year, as well as displaying wealth and status.</p>
              <p><h2>Symbolism</h2>
              Ornaments and labrynths would serve as religious and mythological symbolism.</p>
-              <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Tudor2.jpg" alt="centered" width="500" height="350"</p>
+              <img src="Tudor2.jpg" alt="centered" width="500" height="350"</p>
            
     </div>
 
@@ -738,7 +737,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -758,7 +757,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
