--- a/VA.html
+++ b/VA.html
@@ -10,7 +10,7 @@ div class="main">
 <div class="row">
   <div class="column">
     <div class="content">
-      <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/IMG_0591.jpg"alt="Rosa Dameseena Aurora" style="width:100%">
+      <img src="IMG_0591.jpg"alt="Rosa Dameseena Aurora" style="width:100%">
       <h3>Rosa Dameseena Aurora</h3>
       <p>Lorem ipsum..</p>
     </div>
