--- a/Versailles.html
+++ b/Versailles.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -572,7 +571,7 @@ text-align: center; /* Centers text horizontally */
         <h1>Garden Design of Versailles</h1>
         <p> Louis the XIV was recognized as the Sun King, which is displayed in the deliberate layout in the worlds most outstanding, and historic masterpiece of garden design. The landscape is engineered to the fine detail in intricately trimmed hedges, precision alignment of parterres, paths and water displays. The symmetrical geometric layout, sets the bar for the European vision of the Baroque period.  Architect, Andre le Notre, designed the landscape that eventually became a French jewel of garden artistry, symbolising power with grand canals, the Parterre the Broderie, and a seemingly endless expanse of highly maintained greenery. 
         </p>
-           <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/Versailles.jpg" alt=centered width="350" height="250"</p>
+           <img src="Versailles.jpg" alt=centered width="350" height="250"</p>
     </div>
 
     <!-- Sidebar -->
@@ -725,7 +724,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -745,7 +744,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
