--- a/Victorian.html
+++ b/Victorian.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -572,7 +571,7 @@ text-align: center; /* Centers text horizontally */
         <h1>Victorian Garden Design</h1>
         <p> The Victoria age is when gardening rose in popularity between the upper and middle upper class dwellings in England. Lawns were used for leisure, and considerable pride was taken into caring for them.  
         </p>
-        <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/The-Victorian-Aviary-Garden.jpg" alt=centered width="550" height="300"" 
+        <img src="The-Victorian-Aviary-Garden.jpg" alt=centered width="550" height="300"" 
         <p> <h3>Flowers</h3>
         Alyssums, Ageratum, Asters, Caladium, Campanula, Clematis, Chrysanthemums, Coleus, Delphinians, Daylilies, Dianthus, Honeysuckle, Hosta,  Lobelia, Marigolds, Moonflowers, Moss Rose, Nasturtiums, Oxalis, Periwinkle, Petunias, Primrose, Snapdragons, Violets, Wisteria, and Zinnia. </p>
         <p> Cut flowers like Azaleas, Carnations, Daisies, Geraniums, Roses, Ferns and Lily of the valley were frequent in Victorian gardens. </p>
@@ -582,7 +581,7 @@ text-align: center; /* Centers text horizontally */
         Acasia, Ageratum, Amaranthus, Aster, Bluebell, Black-Eyed Susans, Caladium, Calendula, Campanula, Chrysanthemum, Coleus, delphinium, lupines, Dianthus, Dusty Miller, Fuschia, Geraniums, Heliotrope, Lobelia, Marigold, Mignonette, Morning Glory, Nasturtium, Periwinkle, Petunia, Roses (miniatures), Snapdragons, Sweet Alyssum,  Tuberous Begonia, Verbena, and Zinnias </p>
         <p> Ornaments would decorate the yards of Victorian gardens, with birbaths, sundials. Fountains and ponds with lilies floating throughout, surrounded by stone benches would complete the atmosphere for a garden tea. </p>
         <p> <h3>Structures</h3> In the upper class parcels it wouldn't be uncommon to come across a aviary, glass greenhouses or conservatories.</p>
-        <p> <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/VictorianAviary1.jpg" alt=centered width="550" height="300"</p>
+        <p> <img src="VictorianAviary1.jpg" alt=centered width="550" height="300"</p>
         </div>
 <div class="header-text">
     </div>
@@ -737,7 +736,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -757,7 +756,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
