--- a/WebCodeFlowers.html
+++ b/WebCodeFlowers.html
@@ -130,9 +130,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/0011_26.jpg" alt="Flowers of the Okanagan" class="header-image" 
+<img src="0011_26.jpg" alt="Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p>Beautiful Gardens</p>
 </div>
 </header>
