--- a/climate.html
+++ b/climate.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -359,7 +358,7 @@ text-align: center; /* Centers text horizontally */
   <p> 
     According to the Koppen Climate Chart, the Okanagan falls under the category as "Hot Summer Mediterranean Climate (Csa)"
 
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\KoppenOkanagan.jpg" alt="Centered Image" style="display: block; margin: auto;" width="550" height="350">
+    <img src="KoppenOkanagan.jpg" alt="Centered Image" style="display: block; margin: auto;" width="550" height="350">
 
     <h5> This subtype of the Mediterranean climate (Csa) is the most common form of the Mediterranean climate, therefore it is also known as a "typical Mediterranean climate". Regions with this form of a Mediterranean climate experience average monthly temperatures in excess of 22.0 °C during its warmest month and an average in the coldest month between 18 and −3 °C (64 and 27 °F) or, in some applications, between 18 and 0 °C. Regions with this form of the Mediterranean climate typically experience hot, sometimes very hot and dry summers. Winters can be mild, cool or chilly, and some cities in this region receive somewhat regular snowfall (e.g. Kermanshah), while others do not receive any (e.g. Casablanca).
 Csa climates are mainly found around the Mediterranean Sea, southern Australia, southwestern South Africa, sections of Central Asia, northern sections of Iran and Iraq, the California Central Valley and Southern California, and Central Chile. Southern California's coasts also experience hot summers due to the shielding effect of the Channel Islands. However, unshielded areas of that coastline can have warm-summer Mediterranean climates with hot-summer areas just a few kilometres inland.
@@ -390,16 +389,16 @@ Source: Mediterranean climate - Wikipedia </h5>
 
 <table class="image-table">
   <tr>
-    <td><img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Climate\March.jpg" alt=""></td>
-    <td><img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Climate\April.jpg" alt=""></td>
-    <td><img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Climate\May.jpg" alt=""></td>
-    <td><img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Climate\June.jpg" alt=""></td>
+    <td><img src="March.jpg" alt=""></td>
+    <td><img src="April.jpg" alt=""></td>
+    <td><img src="May.jpg" alt=""></td>
+    <td><img src="June.jpg" alt=""></td>
   </tr>
   <tr>
-    <td><img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Climate\July.jpg" alt=""></td>
-    <td><img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Climate\August.jpg" alt=""></td>
-    <td><img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Climate\September.jpg" alt=""></td>
-    <td><img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\Climate\October.jpg" alt=""></td>
+    <td><img src="July.jpg" alt=""></td>
+    <td><img src="August.jpg" alt=""></td>
+    <td><img src="September.jpg" alt=""></td>
+    <td><img src="October.jpg" alt=""></td>
   </tr>
 </table>
 
@@ -447,7 +446,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -468,7 +467,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
