--- a/shop2.html
+++ b/shop2.html
@@ -131,9 +131,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -551,21 +550,21 @@ header {
   <!-- SHOP -->
   <div class="shop">
     <div class="product">
-      <img src="https://via.placeholder.com/300">
+      <img src="300">
       <h3>Aprons</h3>
       <p>$20.00</p>
       <button onclick="addToCart('Product A', 20)">Add to Cart</button>
     </div>
 
     <div class="product">
-      <img src="https://via.placeholder.com/300">
+      <img src="300">
       <h3>Garden Gloves</h3>
       <p>$35.00</p>
       <button onclick="addToCart('Product B', 35)">Add to Cart</button>
     </div>
 
     <div class="product">
-      <img src="https://via.placeholder.com/300">
+      <img src="300">
       <h3>Visor</h3>
       <p>$15.00</p>
       <button onclick="addToCart('Product C', 15)">Add to Cart</button>
@@ -774,7 +773,7 @@ paypal.Buttons({
 
 
 <footer>
-  <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+  <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
