--- a/submit-artwork.html
+++ b/submit-artwork.html
@@ -131,9 +131,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -1674,7 +1673,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\C2EB6.jpg" style="display: block; margin: auto;" width="470" height="470">
+    <img src="C2EB6.jpg" style="display: block; margin: auto;" width="470" height="470">
     <h5></h5>
 
 <style> 
@@ -1787,7 +1786,7 @@ button {
 </div>
 
 <footer>
-  <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+  <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
