--- a/twentiethcentury.html
+++ b/twentiethcentury.html
@@ -132,9 +132,8 @@ text-align: center; /* Centers text horizontally */
 
 
 <header>
-<img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
+<img src="01126.jpg" alt=centered "Flowers of the Okanagan" class="header-image" 
 <div class="header-text">
-<h1>Welcome to the Flower Gardens of the Okanagan</h1>
 <p></p>
 </div>
 
@@ -578,7 +577,7 @@ text-align: center; /* Centers text horizontally */
         <p><h2>Bedding</h2> The Nursery Trade optimized space, and efficiency. Bedding maximized product.</p>
         <p><h2>Prairie</h2>Natrulistic planting</p>
         <p><h2>Roses</h2>Were very popular during this period, a timeless classic. </p>
-          <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/Gardens/twenty.jpg" alt="centered" width="500" height="350"</p>
+          <img src="twenty.jpg" alt="centered" width="500" height="350"</p>
     </div>
 
     <!-- Sidebar -->
@@ -731,7 +730,7 @@ div.scroll-container img {
   padding: 10px;</style>
   
 <div class="scroll-container">
-    <img src="C:\Users\geosi\OneDrive\Documents\Code\Flowers\Images\163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
+    <img src="163B9D15.jpeg" style="display: block; margin: auto;" width="350" height="500">
     <h5> Oasis Lavender Farm, North of Summerland in the Garnet Valley </h5>
 <style> div.scroll-container {
   background-color: #FDD7D7;
@@ -751,7 +750,7 @@ div.scroll-container img {
 
 
 <footer>
-    <img src="file:///C:/Users/geosi/OneDrive/Documents/Code/Flowers/Images/01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
+    <img src="01126.jpg" alt="Flowers of the Okanagan" class="footer-image" 
 <div class="header-text">
 </div>
 <div class="muted"></div>
